update plex-pass with gpu

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:ZxRqrW/aQ5iB7OcdF7en7KnvaW5n5ReI5BHDd/W1NWqi7LLXvGvaO75VeO/e5odqXck0BRiUD8Ynr8QoL6/o0Gk=,iv:zeE8+gRsT+tXqG7mz0VD7pFM+spTWZsbK2stc5D2Nfo=,tag:7YaIHiUnXIZYopMczMFlFw==,type:comment]
-#ENC[AES256_GCM,data:Nh4zukhyiJp3qZjCyZVpzfVajdihiH2e56ZLXA3aFrNtAeADVQRgVXFPAVs=,iv:rqfCeN+TnZLTelMqsmnceB264PwyZ3RzLdpss0RM8dI=,tag:fpcRYjCq8qCWz0Xqw9qRJQ==,type:comment]
-VIP: ENC[AES256_GCM,data:rSXUFHcHOqj5Kwqecw==,iv:oji3JyU1Rijv60qZWiFa+zk6vRSKRh5ZLcniY6ejD0c=,tag:KmIkYhd5tGpJaS3IvETOUg==,type:str]
-#ENC[AES256_GCM,data:6xv/4bpc99bxdnjcjl+wiVFq9cXD4hpRnWpn,iv:kN19dqBZKTGaqDEqGBInmYUmuDZ9L3rNLn8LLgCDs9w=,tag:Z8Qb4wBcJralq/EePPS/Eg==,type:comment]
-#ENC[AES256_GCM,data:JxrkWzZeXOQKF2dgLg42bm34PBFZPq/NE6QDcon2/BXTibWFEpW99LYao5NIj3qerniSP31/X6hRtn2P0Z8pQCx+LT4yO/DsxbEdEcYZU4tEGvRMQqyXtx8=,iv:lsGRXgdhGtgKQ098OuphGIFh1zztN1DUzX3B48hQ1M0=,tag:ne2b00pMxnQ9pswx2kk8EQ==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:gqrO8hSVKLLGSqZACoI=,iv:np5mtL7f1ZcATvc66LM50i9UPO6FVdXfwuRjPTMfdac=,tag:MRf0JdS5bHykcqS6q2kqFA==,type:str]
-#ENC[AES256_GCM,data:X/UhzlStC2AjIof18QdvIrNTWnp7/enxHkp50P6u6ofBKw==,iv:Y2QO5iTxM1VeBrYC2xKTr9wv8BfDcA8Y0olB3hXE6w8=,tag:KyCO5464beFw0BsXPY4bTA==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:QUmVv6Thxd//uN+CtQ==,iv:ur6zD75dMmb7iaKAwoBTdzVK46VRDmXorD2oMS+ooXI=,tag:YAtfrVLFkgm2ty2XpuSCvw==,type:str]
-#ENC[AES256_GCM,data:a1gq3ao701/rTkVGQcE1H4IIl5veGyPHzGbd/FV2O5br8ehdeVvShvg6PJOzxBw=,iv:KvykYgrRVACRGjy1qhtnbugjriY+IBql637ajh8+pu0=,tag:/G3KghAqs+Ut+BWYrFyoIA==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:H8lHj23Yjdset+YAuLYRy+jrs8kx4r3fs9GfcJlxkA==,iv:lFLKERFin1VpFLeQUeYXAGVdIZw8MRvkPWzN6qfqfi8=,tag:YQEjq3zxv5KhPsGTL96FRg==,type:str]
-#ENC[AES256_GCM,data:UgOSFzf31yZ54/OlhMW2KFJziVfwsuZ3SPj8ftpA/Pke71ph+cY1Cp2bpCDYwpL/OpECpnOeXaGzc6eUT5y5Cxe5JZlVjaraD2d6J/LuH72VRQ==,iv:I0ahpghTavcP/kWb2Ny9sWsMR1K6cl39vuiAFsTcP1M=,tag:O4IYfJ3w3XoTNh0pmmX4gw==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:f+N/R7Xbkhds5a7CvTSL,iv:IzcePVH8vVY9pj7bQaKqUBIHz80+lthMKS6DeMytcQk=,tag:L6PWzSTfCwlFCbwHj9Is6Q==,type:str]
-#ENC[AES256_GCM,data:A4iSQKZnMyiSnDg5n1u9hS86lU22/emU8n+23xfzi5Fn,iv:nxrqG2f1He/1dPTrEHLl63L+J4mVPU+VgR6334Qx75s=,tag:3pp6TWat6O3CS4ch0Pvt9Q==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:Hto9JAw2xQ8jwnWkONn/,iv:nESkwJ5razPXVfHtNaIWyJ2kbqpWEDfIvGMPMK6HE2g=,tag:qSKTcCIsYRH6UQeSbfgU1w==,type:str]
-#ENC[AES256_GCM,data:aapEDVES4RyPf67mn+D+k0CPoC/h354Q1C4n/Ltx2NZ3/WEeCQumK0DH82tunZpCHqRE2uZD6tpXVxUwbDVwEcWlq3eXhWMzak57TUZVy7w=,iv:h8Ck4z2p24/Ev17PyNTavl32qRp12QaPQ7IzmGGXA1o=,tag:R4su/uogwudCnA1IboVSQg==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:1IUEXTGqUYJKoOnorwO2,iv:xumeOA63HiXdwjDjapLqXfEDdqWojVu+8uGpnB/oYPM=,tag:kSNoqvT97MuRg4DW3vfo7g==,type:str]
-#ENC[AES256_GCM,data:n8XikFHiIjKArghHvE9M1zHEim+5OGAXdu0ZbJzZGx00lBMNzH7E9oSpssBcmpv5mBGjBGmN4K9fVoVyFDlfqS7y4KfOvb0DSEt1YqcrxEZ6ztrcrXuL,iv:D5s18iQj7Q15f9UTCmZJ7gOQtlKQ9mvKTF/2e7/eOl0=,tag:NLygULGii4mLIpMLTqqBKg==,type:comment]
-#ENC[AES256_GCM,data:yNfyd2GbLrAMCiP3XsdzwpzppivWMs0IPHCBrCSo48XySy7k+OG5zCR+TfxbMHE9A+RTwuMGmFeuTZ1Bsdho+Mfv7vLatWBG+AL9COCYuufcTlht66HzyGH4bvbVsSlaZXyzomAg8BJ5tQonwuRregES9cYvSucuX2NF6g==,iv:Fqfb7WKBqA7O7Cyb/1X5FLqaOMOe6mBo+V83aKZJuck=,tag:sY/9w/JC23RelW3kIEFFXg==,type:comment]
-#ENC[AES256_GCM,data:UiB42tfVSOm5TI9Owad4ox/bGPnbiiQzXfi7vCHHbR9Lgn7QjOlgAGH8gRG860NJ210eRHMMgdplrmAMqBWcv+FPP84VVUKuXcYpogWyjxI=,iv:2V9BGpvReb6X204pkqDyJdF4KlV2b86+IboSV7SM8i4=,tag:spxpZwLMZUV0zjGicjdVsA==,type:comment]
-#ENC[AES256_GCM,data:YSySL9wxjmLyrWlKtDDNR0CYGRpq9TwlPiC6nLopJUvi+9DgYiufGBRgtaTP0KcFvkBWFeDT,iv:Cw8IqY7xtkruXGUQZl2CfmGSqYN3JONvqm+BUkSYW2s=,tag:+Y9ESPL+qrq+b0HhNZ5Lfw==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:k/4ib841e84WhjaK,iv:rCmzYcQJZ5aTDjrT070dGyNH9qow5/pjgp7XazCBdJs=,tag:y1/XhFQc4EvdPsW3mA4ASA==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:0Xb+LSwa2r2044nVPG/6iKE=,iv:tnK6N7Pmfmh6I3T6HuZTuHY/pedEqK0oqjpPOQt4/iA=,tag:ehn972PeAcS3J88RX4JTBg==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:vI/Gqoq2ZYPsPllwaq54+yHkh1p91YtvP2oAA7cUKJE=,iv:FsVyaiuALCJ+WuHfGkrACELwOLCptvhWHqiXK7+1Y8g=,tag:8tDWndM+S1Tc51JO3hxjsg==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:nMUwPzafhdmzVtziArMIkuIgCT8bOq1sTz5jkHZdYfJ4ov9NtRGzqQ==,iv:w6eP6LIiPQ/U2rxmjIJiHSS9az87nHIkmgctt6TFBdw=,tag:M1owJ92xd7hspk5jcbkusQ==,type:str]
-#ENC[AES256_GCM,data:59tg8zp6BDCjmjbqMVIviSiTC/QVn8x5UCaC5EHrVMLvAnEAeaasxpS2cxF78L0+BrXd/sqDWGPFD0MCnccKKA==,iv:TmdOOBP5IRcJBk5vrwmYsMjVZvLl7UQQ6/+pbKPLt2w=,tag:P+hWJsmCuS1fQdWRIr3qkw==,type:comment]
-#ENC[AES256_GCM,data:a6skvb1/Rwv8W7AI5Moo0RqrADlc0T2q8rsjzFcQl/BRc7IG2qlvKiAlSWLoIxjuuO8MnRTzF34=,iv:NkTA35Qz6VNBhbZFh+HGIOssdNfzJ7+QfoOeXJSkG5g=,tag:NBhj27Ng2D9FK7AouECaJg==,type:comment]
-#ENC[AES256_GCM,data:IzLC3a81Ji3qoMmTjLvxtAMa35II86or5Q==,iv:2s85O0weD3hT3EDjQ40UcKBd2EnIzoTJ3nLVEd6OljA=,tag:YuldfoRmkb/CX9lRzZf6HQ==,type:comment]
-#ENC[AES256_GCM,data:hJ+UsUl8fgwtJERn2KROV7yXXDZJ0yjt6mFxOGb1MRBYJ0U+fk+zG0PedNcV5UhR0uRLCkgN0aUmi9HAIUGe7ni91BeWEw/t9TcZt2Q=,iv:EABHnVMHfoDdNObKKfo5MgXdSk3mmn7lJzTPjZCJ0Lw=,tag:3PEUQTcdF6RtAVH00QBYlA==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:8mpLBZZ1T9qhqCLmR90bIC2GKAqJFEoeKaMDNd3prr4HjRSjyo0lzPtYCpXCp5X7,iv:HpletKDjoX83jjSF4WYki/m3gwVEMQ16N4pHFQw+x0I=,tag:3xWYAfhHpR/idfm+Na0WTw==,type:str]
-#ENC[AES256_GCM,data:b8NGFiE66S/a69txsQ9mx4eTtF2yXrVcaH0o2qLDstzirP4jlbYoOfWN46I7zxJyFM1ShZHVV8oEc162xwucgnTO8CF10Zs=,iv:yycYudtJJEwEC9xEe+fxL1LX1lgxcqWFc661NMMu71E=,tag:Q2RfA3yeq2CxU3apqZaMHg==,type:comment]
-#ENC[AES256_GCM,data:q3tuLT8K8A0iMYqFt2gT26hwiQqOKgay3copJNJqrnOhGSPzwPvTF67RTLuOlzcPbVLfN3nn,iv:DxMb0rmxgoWFCvdbIKI1RwpKsfUOaC965nmf1I4z3qs=,tag:+TGtckvzJ2Ejri8ZfNfYZQ==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:4CyywXQVQg==,iv:eyX2w6bi0wls4+mgQ8mH9exCBLPVE7QiuCPK+h9cJ3s=,tag:Fim191AgllY/sxB+ScfOkg==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:CVjuXTvZ8VpTRowCIXFs6Yo6fDw=,iv:mIwT956nhuBFV1Wy0QplbUYL0tsv0xR+JIODt47ooAk=,tag:FjYTt3CoGmJPxoCsbJSClQ==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:37kgZsmcbPYf9dI=,iv:1/HkHsafwFvmd157GUGXAtY0e0cVe4+Alspu+HHNwp8=,tag:NnBRgTOwY7BJcB8tAgWrqg==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:PGqjra7aU31kkdU6SGsV,iv:d0kxX3z58FfCsnzwxjzIdGrxF4wiK/mjmyHh6zbJx7c=,tag:gY5IuNtOEoLXaI0vItTCsg==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:m00NlHU4KWljkDUVH+PZgtgrtmP67nFwYQ==,iv:KlJOg3uB7lnHVGUZCvR/4ZWbH/0A1qPAe/adyFl3V88=,tag:PnMREEuiMVKhov1EV8y1Uw==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:o08xsSBkd6Kq1J9MERjOFA5MT+6U5PKYnRHQkjFaCw==,iv:wy1yw0pQoFOpAlI7KVwi+CDfMtOX4MXfZ5L/d+iVIE0=,tag:W0zbcYYz8hC6zJ0T9rTBPA==,type:str]
-#ENC[AES256_GCM,data:eQGsa4jw5KY6RF00Ry1R3OC1IT3RF0QtyYxwxBqFws/XZ7sXOS0=,iv:WjoMJb3E4tf+PsZ6l7P+QL0MZrulzV84Vd2/LgEUyio=,tag:vw9qMSBLYvYcOs4vyn0Pyw==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:fEktHT0fU90WkFrGawL51Z1XYdg=,iv:7A5AaVYRdQEkjA6EzzPU8lKBPwV2z0bHRri9jbkqR2w=,tag:VYQuIpE0V24yyLCzlRffUw==,type:str]
-#ENC[AES256_GCM,data:x630f8mSCxbPaR5Dc8o=,iv:IrTJqScWXiiSSezRJBX2GPW1GxHALb3vh00jqEZjC3c=,tag:YGy0MnZMmwPlloi7ecJ+qg==,type:comment]
-PODNET: ENC[AES256_GCM,data:j7f9noV1Bqr8nwPd7w==,iv:PAUKxZQ7nxNVCisLd2z6jPYSMeOsTS4jURzZ8z12rWQ=,tag:XoGNXEs2oN093g75V1A6wA==,type:str]
-SVCNET: ENC[AES256_GCM,data:zI9q/SfRiJqGcPyTlg==,iv:u6zhyga5nCBco0vyFPOdrxXxO7/oCO0DdgwvCGZ/WOQ=,tag:f28DPONXqjw5bUyHJ75XgQ==,type:str]
+#ENC[AES256_GCM,data:6u5RsZz8HI5Jl5JhAlUdEB7eb107N243ix+7iHkMwUauD/hJ5Rs9niEsJ/CK0C7fY1n5RLYIquayE/H3Yuc5kuE=,iv:GevGJW/Qp22cPILOPus7q6cgArxFfPqqwnLoE0CnJdw=,tag:G8ZswbAVaL+gMWwvWW/gGA==,type:comment]
+#ENC[AES256_GCM,data:Q1+9Rdxjj5PIAsZq5s5i3uuqKL7+RI4CCLeEyDtfQd9+YGXQeBxn/jrZcyU=,iv:BjSIkgeStxEnbWQI6QYUsiRg7dWNLuNcck7R1afinKg=,tag:3o8h9xgRhpstIHniBbf3bQ==,type:comment]
+VIP: ENC[AES256_GCM,data:G54QB+cEL822xvFtUg==,iv:wfU27l7EQUebD0fbHRT5oyXWMXIVs1kdOsL43G17i8Y=,tag:XEMh19cq8lJewbHF4+CRBA==,type:str]
+#ENC[AES256_GCM,data:PmTfRBW4eHxr6iHYakQ8jGFodW1xL1XWs4QV,iv:udEKS1ZMtQ2NE1WFbMJlp+HgWbKHWmlF4OwvpK9vlUQ=,tag:7I5OVUgW8tA764SB6eKn1w==,type:comment]
+#ENC[AES256_GCM,data:5J0K4VOn3JAbaxYeMsio7zqoDDDC4s6nGTe6K9qmrh5QvMWsp4aT+rq+d1mKcYFuEZg3bGvdwPW1flWu2iHNuxa7rgNelfjyeY9xCGWAMbsFvQOOHvRH4kI=,iv:h0RUqKnrSay/oyvWIBvzU1sGTnkYEHXxspS9Xi9mqnU=,tag:wjwNb+56Ypu4F706rFwFKg==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:rXbSHnPRfab6fFULMuA=,iv:484ZsK1mMJMvX50d2sVbDsdhtHoPKHEXNbnuvBJpZMI=,tag:kZEO+SOLiWErw63qpsrUIw==,type:str]
+#ENC[AES256_GCM,data:s3Sw7yeBBdMzLFBhz3jAMiIVlwHZrSstzfuI1oDc0FoJrQ==,iv:uNpduus83NNoyIGi5DX9ilMiT1ZFQt5VB3PKTWLyCOU=,tag:hlczuGzlGUgNlap6yqFbtw==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:/s/9Aws0W1EmosTzNg==,iv:y84Tmz+r+TG3BZtpwK2PIMjbCqds5/NQ92mb0cVagVc=,tag:+lFNBaJemK3Fcc5+KU5mhA==,type:str]
+#ENC[AES256_GCM,data:TlY1m83vdwj6FvcuYcJ0tnsumoNJek0KNhvPYb9F0jXDRhvaAwZV77pnN0CR+pg=,iv:U9PShVywmCGYpv+xwA7VMrVd8ZtRyCLMYqzbrn9fB4w=,tag:B0KWQoEngfJNRu7wZo6Fbg==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:IKGgFZA80q1n8mLboUKd85TkDzltEDXdbHlzgu1nTg==,iv:aeRc5821UDVYo5e2QkDLFONaK2fFf7thjDxf5mxneYU=,tag:4N6bTpEH8PCi5WoTw8a97A==,type:str]
+#ENC[AES256_GCM,data:Ct3RyWyWcBJnR+b2+oIDM5mLsB99OkeAO+8qn0pc80siYR/puipfX3LZJZ0VKjaaw9NuL+ufwhbPcvVrxAqKFjEUOpeV7d0I1C3ZlDwhx5wGLg==,iv:20X9Ui4jWyle9sGnd3oNeEqUQIjVZXjinNyjqd30c10=,tag:JtB372jd2tJ22duqfUfA4w==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:iLPaPfPmF5HZPRqAgmVP,iv:tmV3yKpgXfLEAgrQ0guS9R0Y8DY6EGKlTt+tQInFE7w=,tag:SATMne/WueteMgJzLKaLqA==,type:str]
+#ENC[AES256_GCM,data:4+UWXeK3W2DJgimoyYuAnXQt+JXTeZKgTwY+Xs2boXlF,iv:2OIZ2ds/zeSnz6fU4Tu2QD/c8FF1l1m5wNCldxRcPRc=,tag:cJE/co/ASqW7nK4zrjXcig==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:CwT+EXr3lv8r0cPpSQOx,iv:WeEshpiqHTWphIuZhwcgjs+KkEdRkhCHRZZw/TCI9Ro=,tag:UjwJGEtKQs3C6g3/yoHIWw==,type:str]
+#ENC[AES256_GCM,data:5aZfAKVNL+mOlSOqqbw1BblCGRzmnHuf+zNPkHeR4CrXTpAGSSfzb/G/nKbEDBC24wwAvfqaJcSGp3u8/he5jCfIfnEJhaBTP0QGbvtsX/Q=,iv:xTY+XaJ3EsPo8MG6STzl9GEHKoue+nYeFaVegfPZyZU=,tag:wf2nWl8HRCZU6hp/w1jpuQ==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:yFOZJ5RTXan5mlycyN8B,iv:4Zaeu6lzpivcZxZQS3/RMvDejghOM+s3m0UGK9mSo9Y=,tag:y/+NsTPzx4Dnr8tcSCMsrg==,type:str]
+#ENC[AES256_GCM,data:UWyZLnki5Q9gpcKfb/EqC85mlVPf30SrFPxCSmDx+3ZqdIPuyp56JFEOsrqhyNH+OZ8oulS8hQXuu+ioIBZDejqSS99K1y0UHdXezuwX1ln5hSd6ho7C,iv:TPdL9akdagYRwqGSlByUQWlBSLg5LdRjA0Jdvenh8rY=,tag:uI5aW9q01w8RbXzhrBEZCQ==,type:comment]
+#ENC[AES256_GCM,data:q7wyCFxMIqh8ZESM+hL6npI1iuZEKdpndLQ22Q4U3fsQKuLMlMJCBSyF853yREkD/7SkQlaX6P7e0cDsn1EUYWCUE7kN2Ivljz87p6MpZSohIEEudpAqFmEe4aH+e0w8jJXfJ5D3trs1WZuNblaKF2++/NGUGUgntNNhuQ==,iv:YayUP6dFdXvcMZWTHv+BePBXJFEC+sGAISHKG4Zrwdc=,tag:Y0zmemx1Fr/L54BpbT0akw==,type:comment]
+#ENC[AES256_GCM,data:Va+wdq0QcNn/GAfzLM1DlUV7csiVp3Ym8GTQ4wjYbKApXWm5//GQhU6yUVcWBt8LLxh9ORbBA5Gc4CW4WZ8YBbWZF35fQZ9Xyi1WApJkkD8=,iv:b1FvfZ7/OBzJaBNqOo/PWjyWPMXThWzw+rhZwK6Fk0E=,tag:K8SWmF7E+AZDRYiv66eVlQ==,type:comment]
+#ENC[AES256_GCM,data:G5Ip5zQmKPO4EoY5guRDIlTm5H2sKlWMf2R1c6lZrslIEltzev6qU691Wxs0zxce4lDAFXr8,iv:0yp8Low6N/Ddphv0NdcFwOXDREEECkcob7XoPSgydaw=,tag:9xjezzyJb9Rz0pSabTehtA==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:e1LxNRV2wf1N2mb6,iv:spYqfk8mZgc6Hycef3zYOfCvOcglE6qLYHMShWmmNtk=,tag:Dt6B06e9cu3hFDQmipCF2w==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:oRYpOmzyhSAVxUvinKzZbH8=,iv:aAUf51eZig/gwiBjnlI0gymFps0aIINPtev+epfr82Q=,tag:fuvT8dk0rL/UUQhhF3DCGw==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:WQf9wIK3Vkvmqz5tGMFEUDGpQJ/d4PJklsOctpvbbg8=,iv:GfqS9ZECqSbX3/S50AY1CZTHrdFWvvImgFuHhHK/FUA=,tag:AQ3sClYZkZQ9+OhldMihGA==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:qKbDYLp01d5oQpaNOMcLL76K5Ipy+8T9sYM/iSrP0VE+UagH3MpmLg==,iv:spcx6+XfV2oBINJ4YErkKC61JjgFKBnO9zKsFzlY2Mk=,tag:KlHgPYz9fzPA2UpYLv86dA==,type:str]
+#ENC[AES256_GCM,data:hEmOa6OlbFLIy0lb2nx4RFWVY09Xnjmk6qcmIYUL5YojORjF/L1tAT26N69PQUBXmw7sHomgcROpz5lQ138SPQ==,iv:UaZIKsFSPpxKYSzTV6JYe6jKPBxF1On466YAnEGcMiM=,tag:8sX8IyRGUHQUU2wvcK3bSw==,type:comment]
+#ENC[AES256_GCM,data:b41ISarmkZypuHuL88mUJcx0sNNrYgZn/gOiPJrh8Egg3Wz1FzMq+c2GPOWOmw9e9s9lWi7xiQA=,iv:Rp1s86U7dNLgedn8eCXYibX/nmBkSAE9vGwAnS4F4wg=,tag:dRDW0aSVjcJfqT77mJ8wSA==,type:comment]
+#ENC[AES256_GCM,data:AYUgy9KXrX8iBqOmN159fWKSiMIqoza5Gg==,iv:AeLMaCnARSFQbQxI8MKTR/0zjRq1WLSXw/HBZiR4iLI=,tag:60Nz1P5j/JmUYN1Q63LSYg==,type:comment]
+#ENC[AES256_GCM,data:+AqZ4JzvdGp+r6Any/pD7iX1lH4O4Il4aa2RdvfHvYt5fr1oEcxEmGCmuf3HdaVnkICzreFZaz8YA5Gx3ITKYW+qGcgNGpSO9K1orWg=,iv:nYS/1V1Cq/PniELivHnKTRwe4IShtTeE6i5fWE8RVbM=,tag:Y4uh2GAbIg5ImKGRU7SH1w==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:kI5YZIY8GhTSKlj0vBKjrJm8ghF2DlwEzKkNMUoKkCuvARD3QAOuXYkW19OBShc5,iv:ndCaA5ym4mLe4TTSKOwlp+YjNroz24x5Y4CD46x42Tg=,tag:VPvxfhW2b/JZ/Btvhuotog==,type:str]
+#ENC[AES256_GCM,data:HJO697IpHfuzrUA2bfosws1tenLDtQM244n1p06kr2ZPdJcq18ZITJsT4+p/+c7wu80NWXG69qfsA18MFZu012ISVLEsoLU=,iv:PaCipTPeAn6AQxVGSxAluwlsPrheU05ePiE58EnLcsQ=,tag:YiPj8dQNKtFM7Ucd6PEtWg==,type:comment]
+#ENC[AES256_GCM,data:xah2ftwYyyhPki/w7JwcuSkXnQxo+FqqgQ6Q6L/RwtdFxZ5u0Fsn3e9rfAdKmlgbmIpdrym8,iv:GKYrDv0K1BvqMRIR1xg4Y4ep27GRLjWpY7KuISOYKzQ=,tag:qS/z+ZDNXTNbzKm2vShzvA==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:YXE/Jra03g==,iv:FAPvc516QEPOO6GdjO8Hr/MBav0s9flKG59xwVaOJ7s=,tag:iCBPbj55rJGtbHohmgQilQ==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:2Cb4Hj8nYovYj1L274aHLwVQ0GA=,iv:Ye/xmXc98dlH2KE+zF4mB/hEH9CzkafPgY+/+TVqMMQ=,tag:xYIEwiC5cKKx10KrbdX/xw==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:TpkNz9M80mkFi68=,iv:1PL81tJPz1B8tgAF+Yfkdk3Q2IgLyxTLoJp/IoYYirs=,tag:OicTlp+jaauaut/Isf43yw==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:sz8N3RUWmiH34nUuZzhu,iv:TS95cNIgPuWE4EMWkz/K/AXmUlzjWKE7hy0wRKL7YUQ=,tag:BSqKPejMg0We5ulPTnQVEw==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:6Zbm8go9EsRU7GZUvzAWVlaNiYTsgBJ+tw==,iv:OC99iSwgQ45H2105taALsyy2Aj4uZlCCGita84Myltc=,tag:x/zgg83cSZXt2WJg8knKoA==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:tX5+pyhi60fel8J7A/vINNJj3lK7rSCuX7q14JSptg==,iv:zSPtfolb1NQhuZU7n4s7K9y8bCw1RMt7KjBfwig2G0k=,tag:KUURrghbBOEZe12oyAdkWg==,type:str]
+#ENC[AES256_GCM,data:BPHGoORcgYdoPzsld3B5W0KXLGC3XperVGkFiPAzAYI41oqVcW8=,iv:9VrC86ZK1O9mwTi6EvW3+wsdbXfJslFBuIU+ZrDMkfU=,tag:qZeto+EzbPNcUDNIC7rs1A==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:FzwafQVWHR0yAwYQxboV6Anx8EQ=,iv:LKGZknvasz4W5Hi9HHZKTlVZ9ZVhJvppeGORFRhs8ds=,tag:s3X2nogNoFY+2o/qHcX4xg==,type:str]
+#ENC[AES256_GCM,data:bsQh24Wkch7lu7AWTVU=,iv:yKaEfcWzikLppanWX30TaPpSTB3+ZXhSRVvQJyMsjh0=,tag:R8vPY+ek7aTNVwkLABvuRg==,type:comment]
+PODNET: ENC[AES256_GCM,data:clZ+1sClFd+ytTbiQg==,iv:zZZRUoyfhV+KEOPGJ10MdTq2QaTPgh4L9AQWKJ5qvZ0=,tag:TxRj38lmVzinumj+A/iABg==,type:str]
+SVCNET: ENC[AES256_GCM,data:qWU9DsWajINxPZEUlg==,iv:6g67uR/WsZA9MpVR+6WJrY3xFwjFkBKZjtjS6SIEqaw=,tag:pJy7NXdlO2oXnVLrMGxa5Q==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyV2NtRGFYSnBSRm9OeTR1
-            bEJpZDJHNkJDSithek9vS2l5MjZ0MExNTGdNCnNDWDdjaUtrRW5xaWlGa1J2aEhI
-            S0ptaHlWaXFUN0xRYlFmaTR0L0paR1kKLS0tIHEwSm4wY01xQWlCcWc3Y3hqMTBR
-            cXAwdnc3d2FJSXNvT2JrNTJ2bytWVVkKGTn0SVU+bLKQwmettou0IuE4rHwDQdR2
-            slT3fplgQXyD37H4jezzVnI8G2OLmOz5sUMAxsAPVg8WUhDI2SwT0g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzSGx5SEd1TGREMWh0YjM2
+            eXg3Z2pORTJWK3YrcjFOZkZUamR2WG5zWWtZCmJpNU9BRThCU2ZrUHVpNWtmeGxW
+            ZVpId0ZiVCtEamNBakZzNVFJT1RtRWsKLS0tIGl1TDh2aDE0OVVjT200ck9YVUlq
+            Z25DaUllaXh0c1dvTmhueG0zdjFEMVUK34Bd2MrpgK8ztbUclkzGjc4om2nEemDi
+            iLRUQn4cJUTKWr+ELBplSzWR4APF/WslX9CiWNrrSsKUa+klRUphvg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T20:21:36Z"
-    mac: ENC[AES256_GCM,data:CbVADjR8N4gCLd6+OV32FXz22vtlyk7Vt2gvqkgVfBnazJAKbLOWwD0TlFtM3YijLtNnSxc86wlqPT1fRLv2DpO6BGQuc/dEQbB/kHcUn3uEXW2+Vg2OqqVKru0uND/hugUarytGJ9npNSMCz2KsFFd56TrWyJVLyaFjlMggBZ0=,iv:mGEhKeZI0G8VWJtAOBm9/T5cyggASiC3m5EcvWIViIc=,tag:K9WPNMj/nVF7WydmZBK3Rw==,type:str]
+    lastmodified: "2025-01-19T20:26:16Z"
+    mac: ENC[AES256_GCM,data:cA8/z5wr01OWQIOnNAO4RvUNTUbvQF5R9ZZed8vyEDZXeSmP6vGQ5Ia7N5wANUOi+sXntqals2d038g+REncXVhAcTjRocOyO/lQFZfxUinzxQHSbBdKKuKlwrWHyDpEJ0o9vrY7FwhnYGTpa9G/9sWDcPmcs5kh4SpSlHXc9K0=,iv:h0AsMsN9EU3JLV0OHa9M1jC6e6O7HdyUzWGoXxULE20=,tag:0WE9wWhjEe/2mHGUvZUtiw==,type:str]
     pgp: []
     version: 3.9.2
