--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:Vugh5XXhJuzLoAGZUiKdYn7dSoC++Ld2GuQvNvwlQ+oNouMZaBnbFdDvzQh1tpWkC6q+vYxE21esmMuLQVzpedM=,iv:MUR9mSCN1r72YbPCwqaPxLEI9faf6dKrvMPtg7uvUPw=,tag:ORBGXM4JihjM6Oe0lGbDzw==,type:comment]
-    #ENC[AES256_GCM,data:gRy3E+zAZDW5zka2DOObOBEliw2kkyP7pHTn9JdMh8DW6Eowh2yyX+yoWLU=,iv:1PiVbFL8yQFDm5ENf9g1AAwj1anr7njPA4Q/Gmp3FQE=,tag:Ay8+kRBkSHG9NQtu3fauMQ==,type:comment]
-    VIP: ENC[AES256_GCM,data:jcjQAVPAGb1vcyM1bw==,iv:9owp7sfFhEdvslwVGcHW8CB0mpaE6Zz9GhtQZsVmNuI=,tag:HWdu9LXBG6810ENVdIxalA==,type:str]
-    #ENC[AES256_GCM,data:mvi4Zzo2v2rY9BgTO6BLIsVMfkHnszCknuxj,iv:0vH513QS+oJG6RVs//j2nJxvEDF51OcmqoPRhvvduuI=,tag:CVpVFB7RdIcklP2KHfVCWQ==,type:comment]
-    #ENC[AES256_GCM,data:b1CjVV5Zw7FBbDXcZ8d8sWgoMJu7sXynF1o4VJ0MH3/1O552GdJvX6adpAhtKXKZOjIfGSmNAw9+5lRVV53ELvp2yV0Yx5BnoN1GtqLSlDPY6j9i+UCTy+k=,iv:ZqizTOOoKq3yzW2icbtJBt31d3v7voJLaPlzxliWDyA=,tag:yd4cm9SheQyuEISw/udvXg==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:ef9kHouIiOjsB/Eok2I=,iv:0k16Kp1lTRojeGUsqDq1OC7dQlAiFhKiNPUxoKgEdzc=,tag:j705nR0QTrH6i6GI5fg7QA==,type:str]
-    #ENC[AES256_GCM,data:XtocwCz4YRlG/0YRhTA7PcLF7HTtFSoVIx9YBXmnVttRdQ==,iv:6o2u71G2fZ/kiUQRh2N1G4s6CRD8gkcBdtXlkDmIGz8=,tag:Xbf+4AIUbrwTnfDOPynUsw==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:1JNKTX1dSGyBgQEF5Q==,iv:yfiC8ebKM1UeV7O3Mn4EIalNc2cJW3bj318Nlye7oHQ=,tag:AHZG3CUeV+ts2AdnS5gOKQ==,type:str]
-    #ENC[AES256_GCM,data:inlKyHQLFCECR3Q1wZQfV8u0YwE9wn82/czJsQhmCSTMUANuj6RDs24P4kU9mIQ=,iv:p+DdKrhjKl46OtbhHhRbehI35RSwTRbJIoEHii/6AOo=,tag:L5t7KW9jumodxcGdCSB9Hw==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:NcYhrdGJrv84lEQTaa+72tp3yMS9Kn3ekPsE+X+fMA==,iv:ZyLH1EORKXy4hVriDn2NxdTYladO7sCCr5E/6LbKO2Q=,tag:jQjflgGM5lhwLWDYBAKs9w==,type:str]
-    #ENC[AES256_GCM,data:iXms+VZ2m5vqaFjdimFsdNwsBvtmp2PU/rN2ulyodRrjdbpZ69hGOoNABlwgVj8rcsl1Wc/XwYOg7oIN8gQAXfItRtkfsJPhLcYnDYbJVsg51A==,iv:8QbBIBxGyWc05KFNICho53lkHaUTYPTHTsYqqj0ey3U=,tag:iUV/ifyrN5zveS7dW6ASYA==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:GbvVBfxSONJALSPbIDlp,iv:UUkSr9KgCyPF/s8Wnb4z358DPxAABo4FyYLVqAYLQrM=,tag:5fxCaxR0/QRgdccotum+Rg==,type:str]
-    #ENC[AES256_GCM,data:Eqe+TZKf7bIGfz5PuUyhMkH3u1LMRzeFB7JUEfwEfLTO,iv:1eLDTn/EkfC25nK7be6GmJGvtHXEj/rrYSt4w/IN49M=,tag:DBcOIYA+kZCsRvtpnS8JDA==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:fLO/c4STnw+RxgDbDKUB,iv:u9FW152EGZ46EZgIoWq4vkxLHLaIWO06Iy/gwJvpC3w=,tag:Vn3S5d159WPB37k8aZssOw==,type:str]
-    #ENC[AES256_GCM,data:yUZqy4v4WynKbGhPbwYAp9v+BHaijZ0xO4y8sySsqp3Gqafcuuy7Gi5btrReSIWJ71jWhNkQwDdPwvg3EkiZjqnR+WQLmE5KTnIxlDQD4gA=,iv:cqmcBOY+EChTDvK75j9NNzlI9PZysKqiCG8gEHsTAQg=,tag:8S3VhFE9UIWYzE7nRSxwSg==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:fe32/gas2MHl3KEFjNhZ,iv:cZsdo1rG3tUaA0TI8ZQeeEv1U4bECrAWlzgVZXQu9QQ=,tag:xnjBum517F8+TPzEyfm3Gw==,type:str]
-    #ENC[AES256_GCM,data:hfGZxdqbx0D3qt3RvLTZzZKTpqfNk8hw3BoD+PJMX7UL2DEYFtTzDTeM+eX5yoO5XdsFYQX2OAAHsp7STvkzfLV22w25IUdisqJ+SVwlgbNE3BRu4izf,iv:2jKytTluastXqB/gdjewC6donIOAEYriOy5Ja74ObhM=,tag:nVU3u6jPXLV2k+Dt0Ry/MQ==,type:comment]
-    #ENC[AES256_GCM,data:9tze7cm1hGyDveF3JuVcigQCUjSz7Mq1KG4gvv1CtKpPzyS8/R4uvOZwKQpzEUMo9+iKQYS/yOAQFV3Rup19lqms2RWn8YCNWbMkNf5V95oR0/N1F+ngjVtUojHoUjXbq+naFeEtv5PecnSkq3zhRjT344LeLpYcsYtqbQ==,iv:0MgmhksPxbbeUURr5pbHZ4AVUf3tt7PCrddVpEyp0pw=,tag:1GbHHtKYkeppBFO8jBQzog==,type:comment]
-    #ENC[AES256_GCM,data:8gEPxV2eWUKEHOLO9yE0voJH1XbwswHCDpohxV7KtoJpGZsTr9lzRGog9+IdCnFz+HJgLR8zgkfdZX5sxht38j3K542bCRuC8MM5WH3mzvc=,iv:60EM3ktVm2QGElUsSYeNpKvrZqTWOacoRwnDT1r81h8=,tag:CA3pxTcR9jQ6oKse59B6xQ==,type:comment]
-    #ENC[AES256_GCM,data:Y5eUBFIrzpe03+TE1jLh4KA1fDo63xfyNpGi9Jq9vG2+5SWda9u4dXMrPjNkvU1ePMzyEqWA,iv:X0ip0zMPCPWbE26EMmnw9WMk9hLfbrLRmNhs+lBVT4A=,tag:ss58Ngcxie1azeTeeONbIQ==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:rVrS/7mTF1L6Y97n,iv:oMfjf1lUGkzIFwk11IDxYptYldMu17koPOxqxZ+wULk=,tag:xGe+x8l04+anXMCGOYyhLA==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:10SKliiTG15zgUEMm5tBR3E=,iv:kmQxiZVwpos3qrLpxFCgnjTFGXfn7vhmpkHt5lvrA8M=,tag:+lRH8bHsSVvnZ18jH/EDXA==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:UdGwMW/zKSYaFqf2cBUqFXkkVNIx39qzsjRW2NnpZ54=,iv:fBQDiBT27JuSmsvfjmHd/vkhtmcYL0XV1sEdSpwhROM=,tag:KsgEk9fsssiOIuSfZes2xA==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:kFVN/Bc8IX0yPt3rdWAW1+F9xe2OTD9CcBuJKWYAVaIMw3HK0/osYQ==,iv:BAv9wnR1s1rBWTWmleSCUR/68z0oOP87dP9r/Tz/x0M=,tag:4Fy6jnoOmT08yTNEcrsbCQ==,type:str]
-    #ENC[AES256_GCM,data:MRKiR8nVu06qrfhJlde9WeVCytGZ2TviMF5KNFFwP/fqqbb5ZhwXTNkvL29jRQt4uzFElHxT+iYNFurDm0OgIQ==,iv:08ycxoCLgBTPdBoPioMdeKh4QelFGMHHrLB4UhAPHI8=,tag:FQI6Mqamp2qR8tD3Eu3jpg==,type:comment]
-    #ENC[AES256_GCM,data:dHLhwGaA3PnHFlGWvknCH/x2aQ/+MuUX0Xd929WHw/hDeqYYYFwpONEzBX+DGEdNfvWXlaMF4hs=,iv:sQwrM1SlQeupoxZKcoIz8BtqkJyNcsWKfntLOJh3r/Y=,tag:kYSOpe8K9mWo+DCY8VOdbA==,type:comment]
-    #ENC[AES256_GCM,data:mj/ri8QNsVDsnNaMCsoSS3HGh5DJbN7V1Q==,iv:RZbJrqFnZhjk8kkVwvr2mwhRdMbE8ut1yEMgNfdYCuI=,tag:iriRvI0ZnTrkn2y0oQy9Og==,type:comment]
-    #ENC[AES256_GCM,data:r1I6q24i5PHRX1lLWHK9qzL4tMXgjyNZz5EStYngOmS+qg70G4W0Ekpj7bERP2lJSKTTJgFksc+t0bysLuIS0BzwsObXrGlfkdA4wcM=,iv:6hDQNTUXgGkUzghlIT3hEu3g/CtEFPiwUcp0lW6eTAc=,tag:C5faOH7JEz/p8a6gesGWXQ==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:3IefOEZyXM5kR++WuN99pbNTs5eFUW3uSeoyWceSoHS4g+n60zj9sDx+K77rRLMV,iv:xGQ3uTVxOqaXgEgvhU7bl4s72hC4BMMeRXm1zgGadJk=,tag:XY/QXfwipdeHaeHkgWfF+g==,type:str]
-    #ENC[AES256_GCM,data:fu0QROc/Wny9iUUEsWkY1OCqbZpiit1f1nNyoFXE/3Zu452uu9JChg6E5Oana8bo7GQTAQKIgNhfMR9NrtrPaTP0pd0B0nY=,iv:iqpZ1f8ueSVKx4uLwrtNMxzTLoJnSIh9xbYSutaW6ms=,tag:bmHHuojERuNPuTIDn9sB/w==,type:comment]
-    #ENC[AES256_GCM,data:ZniJ9mamNjBc3nSfi/ZQk8VDQKzwOJiYFreK3VpPnohkrEV/ABEo2ejqqBMN2YP7i9NWUyG2,iv:o66IJD+gBkc6ow2ZCEeqVb+E1zXW6YlwykySPHU2TTM=,tag:Rwi1+OE9a5GAy8uTI6CRYQ==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:MMTHQXe+jQ==,iv:jRDKL9kb4grRUQYtfapYA4JArPKB5Xf8GTV0It29iYM=,tag:UEdObehMHOvx71fxwQWvIg==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:di8/H2EwFPrmVvYAhZTfw+Mjm/0=,iv:5w1s45oLwJO23Uv+m5Hu4Zh67KkwhDSKH5DbunKx+bg=,tag:VH/HXcPvDvc6hXGG1BoE+w==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:MkcAqN3rIZZSj0g=,iv:SxgbRrMmNuX6pvmoILeXkxcqQwwYE5uHL3nfn1gA6Ho=,tag:64u/T7kkKDFfbbkHUu5PPQ==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:0L0Psr9S+8awOIkmHTNM,iv:JFuHPI8dQr7p55+huvwwm7lEtd4o21+Kq7QOIjxsoY4=,tag:Ft1G7EVPokqnkU11BaWIWg==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:n9r3aQdsbCGcpy42tsBCB5x7ISMByBS6Aw==,iv:fcQTQENWqvmG1V2PGe56oUS2EKUjTqNmTfnBszzAGKo=,tag:rfqJ8+a2r6pahqFqCVYS7Q==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:6R/HxPf7NcGtr+JYx8FEgHkVk/MVZbYhDSRt65wI8Q==,iv:CkQCQ5oDR+VraU6NeYPJVjfkv8pC4bW7gCBpOt4B/fo=,tag:OVJknwTzodI6iRl7h2OYdw==,type:str]
-    #ENC[AES256_GCM,data:p4g8CNN+ZqdU/me3QUnV/acLqtsxXUAR0kupX8XGFq3altbodAs=,iv:UMuQGHOk7q8IJgw0icSnBI5k8+hMHj1+/OvvyZ4fj20=,tag:749CvOLIYDIfPdJ3MLjB1g==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:9OnoQFoHB9dqhDGK39lMEIGk5Hw=,iv:4QMy/hOdJWqewrdXP2+T2R49skqIISkH1oo/2z8hxxs=,tag:9T6dDarFxwvw00qXG2Nouw==,type:str]
-    #ENC[AES256_GCM,data:ZZHVkqVMvYrlm6YFY3A=,iv:4B5ik4l4l8ywXPvB7gPJsy5cwE6Aizfu980Q+rsHO30=,tag:7NJ03gtA+2WsX3cQaCTUbw==,type:comment]
-    PODNET: ENC[AES256_GCM,data:OYrBA1Nf/nbbm+xO2g==,iv:HHXxgGzUiYSs38yK/4oV0FE4V8RAZ/M2suWO46Cgaz4=,tag:I36DNwVI8HNBPXgd+IFOsQ==,type:str]
-    SVCNET: ENC[AES256_GCM,data:ENvO5puWsfoBBNXykA==,iv:Tc7MS82zKe4z5TK2a3Ks+aNtDOdd0kyBtXzHG8V6Cvc=,tag:/1mWC3w0U8VXA4g/8zyEUw==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:tCa7FA==,iv:El+8gKwnapLkX3nr1+TJMnqciFM9x5mKtyRMf+xTbbs=,tag:2sJiaVsMviK5A9rS3B/zaA==,type:str]
+    #ENC[AES256_GCM,data:DyRZg6Tne7XJ7lhntVEJ5C2FcoI4ZLSjJUI/wa4N7z3hakb+oPG54ELjKtijA51vk5D6T+38s0tulZv/oLojaXs=,iv:wr2GazwEcwvMyL00UDNNY83SpPQdb17c4hXOSiZlG64=,tag:LVLAiuDEqnNYKi/Apge1lg==,type:comment]
+    #ENC[AES256_GCM,data:Yb7RO1YGx2Ui5QxiTf/VWcIIxAJ1lR/mzyEm6dgS9FzSergjhfKY/0f7LCg=,iv:HD27bGReA+ID/CfjlueHszJKg71okdGIBCVKWce5beU=,tag:KB3mDeMYCP4SLhJ7JoEPQw==,type:comment]
+    VIP: ENC[AES256_GCM,data:dUpc3aPX1M1MdmZD1w==,iv:zsT0zTqbTnjsEGvmgo07Vhh7Pbh24xl9xAlwzzv+s30=,tag:q44k++ixdiG5gdnZn9yHiQ==,type:str]
+    #ENC[AES256_GCM,data:6gkwzySsSP7Tj42EXiVnzl3GxtsKnzQVtDVz,iv:Z9d3by/X+0TyjBxJD8+38D17ELX4Yd0TRclkAy7Cxzk=,tag:oCyCrPQ7xMpepDg53NKmAw==,type:comment]
+    #ENC[AES256_GCM,data:ZYRdVCzvD8o4QczqaMKDqNNQ1+nW7P3yhWWt/Fy2nxwYJCd1kM/3REvyu8cCFp2NAoEIeUTwm2Z4ptcihFlKgnjeZrtTBHA6UGTGgyBDz8iar+Doi7Toc04=,iv:FZsPclqK7vv773CtyJmypNGz9ACGt/f5tcOJtt6q2WI=,tag:k6IosoDNpBRSZugSR/LrDw==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:D8K2rl5YDdm6BFc6auI=,iv:8Za97ZfiAodT+/7M2a5VkztJQ8TplIF7w+H0feDzu3w=,tag:7lxqi/eu2sHyjSJ/h0t44w==,type:str]
+    #ENC[AES256_GCM,data:DBaN7TNwAj7onzoitlumDB3+zmkX7QDT9VonadObEJF7LQ==,iv:7i4kdIK2CGtgVTIzyQDlub81D5kLz1pwnRgCwEy/YJc=,tag:tTPYK6uLbcDiBgq63dkZyg==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:4LTD9XBuR8zqE3MteA==,iv:FtgNGnoswHk8drVOiDJh7vBua21Sj8uvzS/t2ABQ1zs=,tag:ufXQuTO4deTMlpWNhHoKgA==,type:str]
+    #ENC[AES256_GCM,data:Pkbc6KyvKEHkbPbFQhre0eOLPIjzfMd5WWPGPLori6SECnnnNHlzJAAVS3aIvsg=,iv:KOr1RFfH6MLhGe5lvVMu5XnFUvpROI9P841MubJSUjo=,tag:ahB6WWU5E19ntryh3xX7Ew==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:u0HEcfxYjEZlYvDCIq7ebkOhXvfRoe8MNafyFStHyw==,iv:EPd4Qomp4NkeIKdaMVxrE2JjcWB0XDy7y29A9RJsb9U=,tag:iwD26ElIh/7NjIY1pODOAw==,type:str]
+    #ENC[AES256_GCM,data:89YD3rNaewnnA0419qKI3N/zCDTQETNN9iZZYw3bdHvG1KYwsDUSkd57Z1Hnb5H5fz4xdUHTST6vkKi0thUENy+KFVv1io+/behFaOqTW7La3w==,iv:i57Y9lMuji85mks3f/sG1d5qMjT9PA52+Dg/JIbS6u4=,tag:9kJs1/54btPQ3xQ35pclcQ==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:icz/6m+/FLNumKlchDPF,iv:ra5bUTvPuXcfqMmUNyf5qNsM7ruNlttk+86zFt5wKNE=,tag:Fpuc5NjH+mHJ4hc/zTksrw==,type:str]
+    #ENC[AES256_GCM,data:AFxfzN9bwO7dU7btb9h+htI3S+fElPvifEXOj5EIUN1W,iv:gCCBN55zxTt///9/m7bo8gvrQSESlg4eeR5FyNnFTSk=,tag:hxpqSAfR7mTS8sVHv9/uJg==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:BA+5CJpenAj4SPhR3n0j,iv:NJ6SeVJId4PLvfo3AK2mPqBN+gOQBztOGFlQVY/ddUw=,tag:Fd9D5/2KDB2bwf28dOkmBg==,type:str]
+    #ENC[AES256_GCM,data:tQjKNaX1TZCDg67gF8EZork7iLT41dcFIaPrrJ1upNYh5p8pPM8N6As9/20ZyYtMH5sBlt+n7H3fXI7p6Y6Nzd/Ud+ypz/QpuHR395NYCJo=,iv:QOUWOo38QIQMwLKjQwY6yoMST1VBuH78rf36nnZnH18=,tag:igLfbDi598A3g+OdgLVroQ==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:o/1IuUda2r/GYk/Dz6fL,iv:xnmXTxUYjR+B/QKs+l/0rPNOsVssEzAMVDmPokZaCDQ=,tag:UB+8k/WRfw+i6pSqUZfBeg==,type:str]
+    #ENC[AES256_GCM,data:X5fl+CfQq4FYO3Tx7pqoK4AELTIgaiPWNzJ7VbBgxe+nw16exO9MrFvIPYKkbffRE7xjkvS6k7s8TPh6Y5HpRYrmnHtCRxWELfPIfF7ZkO6l+Z3awf5o,iv:WQS9PA/BqaQPlJrRYT3qyjfByIdX8iffVktAqIfoYWI=,tag:bP9N2YK3E2aNcQegAoByNg==,type:comment]
+    #ENC[AES256_GCM,data:VsTcuw7OCQ4SmykEVY5zMDpOFNGjJFfUi0a33KpF5YFaKfm3I8vXR0AUrabFREjvRGgk9xqqpZ7iFzVQPngZGMeBozx50QncbEcr0rqPHms/k7e0PWecK1mACZr4rfZqOpsaAPDQ5aNmmQIt8UTIMvkkwgR8mdVYCiUIGw==,iv:KGFa7KglXAMoAeKsMaAtnl63hz74Go8w0F/NulK2h0A=,tag:GBH6U/yhD8qQPg8nu3q5cA==,type:comment]
+    #ENC[AES256_GCM,data:sKHgBHVPEYCxQwFv8kOCPhh7k8ZKYrVPZn9BveUFA4uCk1oCRFy9L9fDxkbFU0LUhckUyRpT6ZZSGfs68xbWcq8c2AMqtDpMyuAubdIob30=,iv:Qd4P/1TNBCK/a62CU6FdrSUPR13VI5mclU2Sy6e9iJQ=,tag:8qLL4HWaiStwFIHfsFYIzQ==,type:comment]
+    #ENC[AES256_GCM,data:dEiETmJ+mSasGBCznupaDNyx1QmZAeGt0gcYazb3TLPjmxsQLt0sJ1vL3/5/4O3cXgMcLkEL,iv:tORGq6ZlPbBNsgzHzDysFRpDPYtLGy805Iqr2d5JBXE=,tag:Ob9jYUlcF7GbXMezzbWPYQ==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:P6svR8WeBJumHnqV,iv:DmWSzRR1yRCB7bghxa+d7QaAJHHPmNvngHN/8v534Zc=,tag:/fsrfgxAkF94lRgaVfMEjA==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:9RLPKJjqO+feqODy1G39b4A=,iv:NsNUPAJCq/6SMrtNjcsrdvQtJZ83uenut+9zfwdSdHU=,tag:G446bdvRgGfQRgWHJDHT7g==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:bHXOIe1zIwCv1kpFlMSsZ/bgsP6zwc5E3rnpnbXEGD0=,iv:PSkJmMkj/6Gr/c0QYjJNFTXy7bp+3TJpl7oKTOuH/MQ=,tag:AggX/gTNEIz/9achxr1aYg==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:MnoYap7plaXDde1A6EbtsYA6IjVWdVWQa4VVDTgDJaKSAg6OI0IDjA==,iv:Ri9H7+LbBurZ/nOA2vkw9sQYXuSsGfN5L5+BxWVGKuI=,tag:Qn0GFge2Cs2Qbg0KZqB9yA==,type:str]
+    #ENC[AES256_GCM,data:0mYI5jlkAbqHs+O3aFefDiKErrOQyc0VGABWXMUXKrYqZzcRJlYGqxFgWNt52egIRXFuTsBSdyR2T66nIf/RzQ==,iv:fAzwr8fJIst8lr3FkudoBUeBFJmdJeeCNTPmAzPswmQ=,tag:S4mCjZZIEvc+3VbBE07k3Q==,type:comment]
+    #ENC[AES256_GCM,data:LSNIJV/4V3DCCr0+tlRJ4PnKy7Peil61xK3xoX0jkhcq+EZyQDCmbkoI3mJWTs75hlMQ+PljZHM=,iv:lXHmzdS12epLITWraA7/9YML6j2FQsOPk0yKsISjyek=,tag:xVeVMe/oq1TLiVWkdONDvg==,type:comment]
+    #ENC[AES256_GCM,data:xkI+vYb4+iAEoJ5y/WKkY8ixK52rQGibBg==,iv:cjQPNBeGs55g9sthcYcgEwDADantofnJHFC7icct2n4=,tag:wYk/qeeOcfGvuAPj4M/FLg==,type:comment]
+    #ENC[AES256_GCM,data:nF0U/hgEA0t+z+XsSsbTcOEukTdWRyASvOM995rxpK3ZzMp6+V1bqFSeWWGmLKPxX+l4k81xvRcxT57ILpX9A7UnBqAgXzjJxDHXY08=,iv:CIQ+lLEn1Z/1vouXNhWI7PDZ1zMWVK2Dh1PA3WlJ1bc=,tag:ucCGkcw7NSL/W9RNf6AR+w==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:g88WbKdWIK0a9Ms2nUBSfBnk+neeqcGGG7O98pfkuPSN4KR0v9qonedxKRmx5jBl,iv:YhtSAczBaCMAFJ2YnfFmoy+Mstcd0OOaBhwTkHot420=,tag:XQs/w9Y0n6FB21iFxL6zSQ==,type:str]
+    #ENC[AES256_GCM,data:FlF6Lc9G0xvFQ7gooRpk/brXONmMtM1ctWeDDI6Z5fohctLPxgpp4dCJ5OeR+C/yzWiIWLx5Yfrti6VdGxsTJwr8D7VJ7HI=,iv:n/twh4peMVAbUl8UOWrGRckW48fq/xdpFw1gGowIEBc=,tag:0fr+SLFidP9X3NhHm7jQ4w==,type:comment]
+    #ENC[AES256_GCM,data:Z/ebmHaI/T7wUWParbwidsSSm3Rnl8k8T8/0v8/8aR2/5LPyQyLxxfLAFedYgFcfCWHqkho7,iv:25mLWIuSWmwTYtT+gFiQPvexJxJv0qfxgeDAobT94kU=,tag:DAIAJsoqOFCC2IujVJzPQQ==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:Ec8AyTF6Dg==,iv:pq9cYc1Qfvhi3LWccMw6sLVH8eQUoIk0RzMUjQZZFPI=,tag:i7A8Nz9ZnIjXd4GUI4teBQ==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:xaOGUPjraIjJVRD1+FrawZGu058=,iv:puPNDe3GWs9Xb4dSxBEY/pYkqUwg57Hf2srqJjlG62A=,tag:l34dPr+DFf80vNJnaGLSjA==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:itNamw7SVKtyaYc=,iv:zmY9Fx0DG+VD0wx7ihprXbie0ju6TCkRn5mlxNVRy48=,tag:9xMHw9BsOIk5X7MwYvBBsQ==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:J70Ixm/P280/MDLVaqU4,iv:EE/IEkOxoCcxOPrZbCNo6I4LfMmGCU0rWKmluPqe00Q=,tag:G5YwkcSDSEiNi2xqolzzEA==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:jhXzBhn8GQpgswJd9ZwioQT/xPNXk7Evew==,iv:kQpXszVz2oNAK4JJaJjcgFbZEr0HRSqU4eCBrCfRSvA=,tag:YnnWojcwf2K2wj42kJuumw==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:reCMCqZCiXBAc0qbf9J2RCEL6UeAvsrYyZQhEuS8hw==,iv:LGPBL3aCKILdwrRYpw31X5JLdmmnmo5FDgMGgzQgKZc=,tag:PcWBr7kDveCg+WWTsWLu0A==,type:str]
+    #ENC[AES256_GCM,data:qcogh1vv5SqWS1SQfG6U3gsW7AaWP0wiNH1Tny+rsVE9nJ4t7HY=,iv:UrbiRk+CzVOUuSqEnDUgdFLZaTHOk/qtGVbdol6WpDI=,tag:qJPmG+nqlIl3SxAl/bjdGw==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:koYyJ6K8iccsSRSXTsxvk/MtiO0=,iv:fVksJuHMspYf8RFHq4ozaZCsvVEqO9VNmkYRT/zt7+o=,tag:0UJA3rKtgfKb7SYZ8Yfkcw==,type:str]
+    #ENC[AES256_GCM,data:mAmKjlyUBwGdmv0yqD0=,iv:ZQWTeSRoLiSzSjxSJVOR2ARXcy+h3T5aCou6OISs7cE=,tag:qWpvOWi0bkksRWK0jHrKOg==,type:comment]
+    PODNET: ENC[AES256_GCM,data:PoT6b6TOXlY8E3P6vA==,iv:ZxMrf9mUNegPtYhTqBZw9pCOSOc7RCtqu0w63ULp918=,tag:oacZbh7WmsVus7q+S0QVmA==,type:str]
+    SVCNET: ENC[AES256_GCM,data:LNTtBPH2vNp2QOHgfg==,iv:zZgXMAnxyM9QBGGoRasmoXflECLoNxDN1Frriv+1GHs=,tag:ZPwlv4UXWMomb/Y1UFXrYQ==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:94h4iQ==,iv:5sA9jMLwtGPNTQ63469n09+GpQ8DIjjdgbhN0V2qVnI=,tag:ANu2k16lJnp2wuEC4ydZuw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArZ01HdWtUUHNVQUJYRGMz
-            TmlkVzI1NEtsMDJoQlRNZ2ZLRWIyU1pKY2swCnFiWGl6VStZYzVlcW1IN2ZteUZ2
-            RThRcUpJZ1A1dmY5cDV3MzhTcndNSlkKLS0tIEVtOGpjMHcrZFFMYUxNcEFsOUNK
-            TGNmcmlDLytxWjhVZmJUWW95MzZGYmsKdWzEumj+CO65/cLwIfo3YkpYgR2d1auU
-            okgTj8EAUgkInELphM4OAefOsZ0ymRr07HCMKdLJPKexjA+zOCzkmg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxTzVzNnAzK2tOc3dnSnIy
+            YXBmOE5ZRkdBdGNhalh0SGJSdENsOWN1ODM4Ckl3OERuTWhJaURFQjNjbGtVYXFr
+            bXZIeXN1K2xaRGEyS3Z3YmhrcFV2L3MKLS0tIFQ3eXRpaTBDaE10ODRXeEVwM044
+            TEVrUGp6aTFubWFJamRlOU8rTTE0ekkKvaWlxag+9QygcV3iR6U7tHQFNGhcQm/d
+            M0yN3gtUIGZbyJv+HPCAEvRH4vg+9hhFfifSvo7ZeinT9GOdquwHuQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T20:21:36Z"
-    mac: ENC[AES256_GCM,data:NNkGWFRzutEZ62LxT5Rs+8JB4Jyupv2RA07w1ZRmjbNvn2Mmmp8nLxNC7NYKy9WeDrLaRjufJ+Np5xvEMjbCdSKcIHocDWwr7ZHWaVEQAsXk++TjRTyK3x0fKJF5gHnurOk5iEGARYBi5Sm7OeqYJyUjdU0dhnqG+rsXY6ADQxo=,iv:7zPsNe0FaRNBxFqrBvQoop5gYhS2n+06Oxy9pxf1aMM=,tag:FLBJqis1mi3huWA528VekQ==,type:str]
+    lastmodified: "2025-01-19T20:26:16Z"
+    mac: ENC[AES256_GCM,data:FGFOa9z/NicXXkY+E1e31jdj5vyb4kmwytiKoHjzhwQIPEQuIRUjPfMXl5JMRynxEgMusDv8JfI3hQ6HKD9Lumv4P52kbFB0op3Ee1YcE92mmNgEyNFDZWuexelI3rSkdpJqqYb9w62PAn7Mv37NUf5bizLYKxhMYD5TCMtnMZE=,iv:iNQmftgcVrMV+VhR2JgxUHKdMdvT1iROgc5Mi0Xvyh0=,tag:lhjN0ic/4ZUnipHOAhat1g==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
